fix code width on mobile

--- a/docs/docs.css
+++ b/docs/docs.css
@@ -140,8 +140,4 @@ button.active {
     display: block;
     margin-top: 24px;
   }
-
-  pre code {
-    width: auto;
-  }
 }
